<resources>
    <string name="app_name">gip5-mobile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- 3dot menu -->
    <string name="action_settings">Settings</string>
    <string name="action_website" translatable="false">Website</string>

    <!-- Login strings -->
    <string name="title_activity_login">Login</string>
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_field_username">Enter username</string>
    <string name="login_field_password">Enter password</string>
    <string name="login_field_username_error">Please fill in this field</string>
    <string name="login_field_password_error">Please fill in this field</string>
    <string name="login_field_username_error_wrong">Please fill in valid credentials</string>
    <string name="login_field_password_error_wrong">Please fill in valid credentials</string>
    <string name="login_field_username_error_changed">Please update login details</string>
    <string name="login_field_password_error_changed">Please update login details</string>
    <string name="login_button_text">Login</string>

    <!-- Login strings settings -->
    <string name="title_category_change_login">Update login details</string>
    <string name="settings_login_username">Username</string>
    <string name="settings_login_password">Password</string>
    <string name="settings_login_field_username">Click to update username</string>
    <string name="settings_login_field_password">Click to update password</string>

    <!-- match details strings -->
    <string name="send_message_button_text">Update status and message</string>
    <string name="status_lable">Will you be there?</string>
    <string name="status_playing">Playing</string>
    <string name="status_sick">Sick</string>
    <string name="status_reserve">Reserve</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="status_invited">Invited</string>
    <string name="status_uninvited">Uninvited</string>
    <string name="status_declined">Declined</string>
    <string name="status_unanswered">Unanswered</string>
    <string name="status_available">Available</string>
    <string name="send_status">Send status</string>
    <string name="text_message_hint">Enter your message here</string>


    <string-array name="match_mock_data_name">
        <item>match 1</item>
        <item>match 2</item>
        <item>match 3</item>
        <item>match 4</item>
        <item>match 5</item>
        <item>match 6</item>
    </string-array>
    <string-array name="match_mock_data_date">
        <item>04/03/2021</item>
        <item>07/03/2021</item>
        <item>12/03/2021</item>
        <item>16/03/2021</item>
        <item>20/03/2021</item>
        <item>23/03/2021</item>
    </string-array>
</resources>