<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_category_change_login">

        <EditTextPreference
            android:defaultValue="Undefined"
            android:key="UsernamePref"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/settings_login_field_username"
            android:title="@string/settings_login_username" />
        <EditTextPreference
            android:defaultValue=""
            android:key="PasswordPref"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/settings_login_field_password"
            android:title="@string/settings_login_password" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>