<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/lblLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_title"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/login_field_username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/lblUsername"
        app:layout_constraintTop_toBottomOf="@+id/lblUsername" />

    <EditText
        android:id="@+id/fldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/login_field_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/lblPassword"
        app:layout_constraintTop_toBottomOf="@+id/lblPassword" />

    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:text="@string/login_username"
        app:layout_constraintStart_toStartOf="@+id/lblLoginTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblLoginTitle" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_password"
        app:layout_constraintStart_toStartOf="@+id/fldName"
        app:layout_constraintTop_toBottomOf="@+id/fldName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@null"
        android:shadowColor="#FFFFFF"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/fldPassword"
        app:layout_constraintStart_toStartOf="@+id/fldPassword"
        app:layout_constraintTop_toBottomOf="@+id/fldPassword"
        android:onClick="onBtnLoginClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>